Added Introduction, Method, and Conclusion

--- a/Yefeng_Wang/Hudson & Thames - Pair Trade Selection.ipynb
+++ b/Yefeng_Wang/Hudson & Thames - Pair Trade Selection.ipynb
@@ -1,6 +1,69 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Applicant name: Yefeng Wang\n",
+    "- Applicant e-mail: stoch_adv@protonmail.com"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook showcases how to select stock pairs from S&P 500 constitutents for mean-reversion pair trading based on the procedure from [1].\n",
+    "\n",
+    "Currently, there are 505 stocks that constitute the S&P 500 index. It would be unreasonable to consider every possible pairs as there would be $\\binom{505}{2}$ pairs, which are 127,260 pairs in numbers. So to narrow down the stock pairs universe, we resort to PCA and OPTICS clustering to narrow down the stock pairs universe.\n",
+    "\n",
+    "After completing the PCA and OPTICS clustering, we will calculate the hedge ratio between the pairs to ensure cointegration between two stocks. Then we will look into the mean-reversion properties of the cointegrated pairs, which include Hurst exponent, mean-reversion half life, and total times of the spread crossover the mean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Method Overview & Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](overview.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part A & B: Narrow down the stock pairs universe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We narrow down the stock pairs universe following steps:\n",
+    "- Compute percentage returns of each stock.\n",
+    "- Standardize the returns into Z-scores.\n",
+    "- Perform PCA on the Z-scores.\n",
+    "- Clustering on the PCA representation of the percentage returns using OPTICS.\n",
+    "- Generate pairs within each clusters.\n",
+    "\n",
+    "Although the original paper suggests using 5-minute intraday data, unfortunately, the `yfinance` package did not work properly when downloading 5-minute data. For demonstration purposes, we used daily data starting from Jan 4th, 2016 (The first trading day of 2016) to date, which approximately amounts to 5 years' worth of data. If a stock doesn't have historical data that date back to 5 years ago, we drop the stock from the universe.\n",
+    "\n",
+    "We can perform these steps simply by calling the function `form_pairs()`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -15,33 +78,6 @@
     "\n",
     "from pair_selection import PairSelection\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part A & B: Narrow down the stock pairs universe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook showcases how to select stock pairs from S&P 500 constitutents for mean-reversion pair trading.\n",
-    "\n",
-    "Currently, there are 505 stocks that constitute the S&P 500 index. It would be unreasonable to consider every possible pairs as there would be $\\binom{505}{2}$ pairs, which are 127,260 pairs in numbers. So to narrow down the stock pairs universe, we resort to PCA and clustering to narrow down the stock pairs universe before calculating hedge ratio for each one of them.\n",
-    "\n",
-    "Although the original paper suggests using 5-minute intraday data, unfortunately, the Yahoo! Finance API did not support intra-day data download. For demonstration purposes, we used daily data starting from Jan 4th, 2016 (The first trading day of 2016) to date, which approximately amounts to 5 years' worth of data. If a stock doesn't have historical data that date back to 5 years ago, we drop the stock from the universe.\n",
-    "\n",
-    "We narrow down the stock pairs universe following steps:\n",
-    "- Compute percentage returns of each stock.\n",
-    "- Standardize the returns into Z-scores.\n",
-    "- Perform PCA on the Z-scores.\n",
-    "- Clustering on the PCA representation of the percentage returns using OPTICS.\n",
-    "- Generate pairs within each clusters.\n",
-    "\n",
-    "We can perform these steps simply by calling the function `form_pairs()`."
    ]
   },
   {
@@ -336,7 +372,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Do these pairs make sense?"
+    "# Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do the selected pairs make sense?"
    ]
   },
   {
@@ -645,6 +688,38 @@
     "\n",
     "spread_data = pair_selector.spreaddict[pair]['spread']\n",
     "plot_price_n_spread(price_one, price_two, spread_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this brief report, I implemented the stock-pair selection procedure described in [1]. The procedure successfully narrowed down tradable pairs from 127,260 possible pairings formed by S&P 500 constituents to 446 candidates.\n",
+    "\n",
+    "After testing for cointegration and filtering by Hurst exponent, mean-reversion half life, and the times the spread crosses over its mean, I further narrowed down the searching range into 18 pairs, which is now acceptable for building a portfolio.\n",
+    "\n",
+    "To verify that the pairs found by this procedure make sense, I checked the GICS sub-industry of the stocks within each pair and found among these 18 pairs, 16 of them are formed by stocks in the same sub-industry. I also visually checked the spread's price action, and it can be seen that the spread is nicely oscillating around its 5-year mean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[1] Simao MS, Nuno H, Enhancing a Pairs Trading Strategy with the application of Machine Learning."
    ]
   },
   {
