Update Hudson & Thames - Pair Trade Selection.ipynb

--- a/Yefeng_Wang/Hudson & Thames - Pair Trade Selection.ipynb
+++ b/Yefeng_Wang/Hudson & Thames - Pair Trade Selection.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](overview.png)"
+    "![Method Overview](overview.jpg)"
    ]
   },
   {
