include write up on introduction and goal of each section.

--- a/joel_ong/Enhancing a Pairs Trading strategy with the application of Machine Learning.ipynb
+++ b/joel_ong/Enhancing a Pairs Trading strategy with the application of Machine Learning.ipynb
@@ -17,6 +17,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pairs Trading has been employed as one important long/short equity investment tool by hedge funds and institutional investors Cavalcante et al. [2]. This strategy comprises two steps.\n",
+    "\n",
+    "1. Identification of two securities \n",
+    "\n",
+    "2. Continuously monitor the spread between the two constituents of the pairs. When a statistical anomaly is detected, a market position is entered. The position is exited upon an eventual spread correction.\n",
+    "\n",
+    "This notebook is an attempt to replicate section III part A, B and C of the work \"Enhancing a Pairs Trading strategy with the application of Machine Learning\" which proposes the application of Unsupervised Learning to define the search space. It intends to group relevant securities (not necessarily from the same sector) in clusters, and detect rewarding pairs within them, that would otherwise be harder to identify, even for the experienced investor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Download data from Alpha Vantage\n",
     "\n",
     "### Grab your API key at https://www.alphavantage.co/"
@@ -74,7 +87,7 @@
    "source": [
     "# A. Dimensionality reduction\n",
     "\n",
-    "The first step towards this direction consists in finding a compact representation for each asset, starting from its price series."
+    "We begin by extracting the common underlying risk factors for each security. To do so, we apply PCA to the normalized return series of the securities. The result is a matrix with size `n x k` where k is the number of features which needs to be defined. Because an unsupervised learning algorithm is applied using these data features, there should be a consideration for the data dimensionality. High data dimensionality presents a dual problem. According to Berkhin [5], the effect starts to be severe for dimensions greater than 15. Taking this into consideration, the number of PCA dimensions is upper bounded at this value and is chosen empirically. "
    ]
   },
   {
@@ -114,8 +127,16 @@
    "source": [
     "# B. Unsupervised Learning clustering\n",
     "\n",
-    "- dbscan\n",
-    "- optics"
+    "Having transformed each time series in a smaller set of features with the application of PCA, clustering algorithm can be effectively applied. We select the most appropriate algorithm based on the following properties:\n",
+    "- no need to specify the number of clusters in advance.\n",
+    "- no need to group all securities.\n",
+    "- strict assignment that accounts for outliers.\n",
+    "- no assumptions regarding the clusters' shape.\n",
+    "\n",
+    "In this case, density-based clustering algorithms display the desired properties. First, clusters can have arbitrary shapes, and thus no guassianity assumptions need to be adopted regarding the shape of the data. Secondly, it is naturally robust to outliers because it does not group every point in the dataset. Lastly, it requires no specification of the number of clusters.\n",
+    "\n",
+    "- dbscan; A density-based clustering algorithm interprets the clustering space as an open set in the Euclidean space that can be divided into a set of its connected components.\n",
+    "- optics; OPTICS, proposed by [1], addresses the problem of detecting meaningful clusters in data of varying density."
    ]
   },
   {
@@ -381,6 +402,19 @@
     ")\n",
     "for cluster_id in sorted(mlp.valid_cluster_ids['cluster_id'].unique().tolist()):\n",
     "    mlp.plot_cluster_ts(cluster_id=cluster_id, figsize=(15, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# C. Pair Selection Framework\n",
+    "\n",
+    "Having generated the clusters of assets, it is still necessary to define a set of conditions for selecting the pairs to trade. According to the proposed criteria, a pair is selected if it complies with the four conditions described next:\n",
+    "1. The pair’s constituents are cointegrated.\n",
+    "2. The pair’s spread Hurst exponent reveals a mean-reverting character.\n",
+    "3. The pair’s spread diverges and converges within convenient periods.\n",
+    "4. The pair’s spread reverts to the mean with enough frequency."
    ]
   },
   {
